# pypm

./: .gitignore  README.md  _setup.py  package.json  requirements.txt  setup.cfg  setup.py  setup_backup.py
npmpy/: cli.py
pypm/: cli.py  errors.py  generator.py  main.py  post_operations.py  setup.py
pypm/data/: pkg.json  setup.cfg
