[metadata]
name = pypm2
version = 0.1.3
author = AbleInc
author_email = douglas.jaylen@gmail.com
description = Python package manager for projects running Python3.6 and above.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ableinc/pypm
keywords = package manager
	dependency manager
	manager
	python 3
	cli tool
	command line tool
license = ISC
classifiers = Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
package_dir = 
packages = find:
install_requires = Click==7.0
	stdlib-list==0.7.0
entry_points = 
	[console_scripts]
	pypm=pypm.cli:cli
	    

[options.package_data]

[options.extras_require]

[options.packages.find]

[options.data_files]
data_files = pypm/data/pkg.json
	pypm/data/setup.py
	pypm/data/setup.cfg
	pypm/data/pyproject.toml

