[metadata]
name =
version =
author=
author_email=
description =
long_description =
long_description_content_type =
url=
keywords =
license =
classifiers =

[options]
zip_safe = False
include_package_data = True
package_dir=
packages = find:
scripts =
install_requires =
entry_points =

[options.package_data]

[options.extras_require]

[options.packages.find]

[options.data_files]
